--- a/linux-3.14.37/README
+++ b/linux-3.14.37/README
@@ -1,3 +1,9 @@
+!!kao notes: 
+This compilation dont works properly wiht unpriviligied containers.
+
+
+!!Kernel Notes:
+
         Linux kernel release 3.x <http://kernel.org/>
 
 These are the release notes for Linux version 3.  Read them carefully,
